# scriba

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  scriba.py
.github/workflows/: ci.yml
tests/: test_scriba.py
